--- a/ci/github_actions/pre-commit.yml
+++ b/ci/github_actions/pre-commit.yml
@@ -5,3 +5,16 @@ repos:
   - repo: https://github.com/psf/black
     rev: 24.8.0
     hooks: [{ id: black }]
+
+# .github/workflows/precommit.yml
+name: Pre-commit
+on: [pull_request]
+jobs:
+  precommit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with: { python-version: "3.10" }
+      - run: python -m pip install --upgrade pip pre-commit
+      - run: python -m pre_commit run --all-files
