--- a/.github/workflows/erep.yml
+++ b/.github/workflows/erep.yml
@@ -18,18 +18,63 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r ci/requirements.txt || true
+      name: EREP v1.1
+
+on:
+  pull_request:
+  push:
+    branches: [ main ]
+
+env:
+  TZ: UTC
+
+jobs:
+  erep:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: "pip"
+
+      - name: Install deps (best-effort)
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ci/requirements.txt || true
+
+      - name: Prepare report directory
+        run: mkdir -p out/erep_v1_1
+
       - name: Run EREP v1.1
         run: |
-          python tools/erep_scan.py \
-            --repo . \
-            --structure 00_repo/.cbr/structure_lock.json \
-            --gates 00_repo/.cbr/acceptance_gates.yaml \
-            --out out/erep_v1_1 \
-            --baseline-hash 471210aae34a0cb71fa200aa901d8747e7d0e4f1b6e68781f000f4e17cc22cbb
+          set -e
+          if [ -f tools/erep_scan.py ]; then
+            python tools/erep_scan.py \
+              --repo . \
+              --structure 00_repo/.cbr/structure_lock.json \
+              --gates 00_repo/.cbr/acceptance_gates.yaml \
+              --out out/erep_v1_1 \
+              --baseline-hash 471210aae34a0cb71fa200aa901d8747e7d0e4f1b6e68781f000f4e17cc22cbb
+          elif [ -f tools/scripts/validate_structure.py ]; then
+            python tools/scripts/validate_structure.py \
+              --repo . \
+              --structure 00_repo/.cbr/structure_lock.json \
+              --gates 00_repo/.cbr/acceptance_gates.yaml \
+              --out out/erep_v1_1 \
+              --baseline-hash 471210aae34a0cb71fa200aa901d8747e7d0e4f1b6e68781f000f4e17cc22cbb
+          else
+            echo "::error::Could not find EREP runner script (tools/erep_scan.py or tools/scripts/validate_structure.py)"
+            echo "Repo tree for debugging:"
+            ls -R
+            exit 2
+          fi
+
       - name: Upload reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: erep-v1_1-${{ github.run_id }}
-          path: |
-            out/erep_v1_1/**
+          path: out/erep_v1_1/**
+          if-no-files-found: ignore
