ci(pre-commit): run only on files changed in the PR

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -36,7 +36,9 @@ jobs:
           key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
           restore-keys: ${{ runner.os }}-precommit-
 
-      - name: Run pre-commit
+      - name: Run pre-commit (changed files only)
         uses: pre-commit/action@v3.0.1
         with:
-          extra_args: --all-files --show-diff-on-failure
+          extra_args: |
+            --from-ref ${{ github.event.pull_request.base.sha }}
+            --to-ref   ${{ github.sha }}
