--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,9 +6,8 @@ updates:
       interval: weekly
     open-pull-requests-limit: 5
 
-  # Add this only if you manage a requirements file for Python
-  # - package-ecosystem: "pip"
-  #   directory: "/"
-  #   schedule:
-  #     interval: weekly
-  #   open-pull-requests-limit: 5
+  - package-ecosystem: "pip"
+    directory: "/"        # folder containing requirements*.txt
+    schedule:
+      interval: weekly
+    open-pull-requests-limit: 5
