--- a/.github/workflows/erep_equivalence.yml
+++ b/.github/workflows/erep_equivalence.yml
@@ -1,7 +1,11 @@
 name: EREP Equivalence Guard
+
 on:
   pull_request: {}
   workflow_dispatch: {}
+
+permissions:
+  contents: read
 
 jobs:
   erep-equivalence:
