--- a/.github/workflows/opslog-sync.yml
+++ b/.github/workflows/opslog-sync.yml
@@ -1,5 +1,8 @@
 name: opslog-sync
 
+permissions:
+  contents: read
+
 on:
   workflow_dispatch:
   push:
@@ -13,7 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # needed for tags/ranges
+          fetch-depth: 0     # needed for tags/ranges
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -21,22 +24,40 @@ jobs:
           python-version: '3.11'
 
       - name: Install Python deps
+        shell: pwsh
         run: |
           python -m pip install --upgrade pip
           if (Test-Path "13_OpsLog/scripts/requirements.txt") {
             pip install -r 13_OpsLog/scripts/requirements.txt
+          } else {
+            pip install pyyaml
           }
 
-      - name: Validate SSOT schemas
+      - name: Ensure output/SSOT dirs exist
+        shell: pwsh
         run: |
-          python 13_OpsLog/scripts/30_validate_schemas.py `
-            --schemas 13_OpsLog/SCHEMA `
-            --ssot 13_OpsLog/SSOT
+          New-Item -ItemType Directory -Force -Path 13_OpsLog\DERIVED\ci | Out-Null
+          New-Item -ItemType Directory -Force -Path 13_OpsLog\SSOT       | Out-Null
+
+      # ✅ Tolerant validation: if SSOT is empty, write a "skipped" JSON and keep going
+      - name: Validate SSOT schemas
+        shell: pwsh
+        run: |
+          if (Test-Path 13_OpsLog\SSOT) {
+            python 13_OpsLog/scripts/30_validate_schemas.py `
+              --schemas 13_OpsLog/SCHEMA `
+              --ssot    13_OpsLog/SSOT `
+              --out     13_OpsLog/DERIVED/ci/ci_validation.json
+          } else {
+            '{"status":"skipped","reason":"SSOT not present"}' |
+              Set-Content -Encoding UTF8 13_OpsLog\DERIVED\ci\ci_validation.json
+          }
 
       - name: Render views (history/decisions/systems/next/scorecard/mission)
+        shell: pwsh
         run: |
           python 13_OpsLog/scripts/40_render.py `
-            --config 13_OpsLog/oplogs_render.yml
+            --config 13_OpsLog/policies/opslog_render.yml
 
       - name: Generate Commit Ledger
         shell: pwsh
