ci(codeql): run on ubuntu-latest (python only), stable

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Least-privilege + SARIF upload
 permissions:
   contents: read
   actions: read
@@ -15,11 +16,14 @@ permissions:
 jobs:
   analyze:
     name: CodeQL / Analyze (python)
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -33,7 +37,7 @@ jobs:
           queries: security-extended,security-and-quality
           build-mode: none
 
-      # No build step needed for Python unless you import native/compiled deps
+      # No build step needed for pure Python (no C/C++/Java build)
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
