--- a/.github/workflows/opslog-sync.yml
+++ b/.github/workflows/opslog-sync.yml
@@ -4,9 +4,11 @@ permissions:
   contents: read
 
 on:
-  workflow_dispatch:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   validate_and_render:
