--- a/.github/workflows/opslog-sync.yml
+++ b/.github/workflows/opslog-sync.yml
@@ -4,9 +4,10 @@ permissions:
   contents: read
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
+    branches: [ main ]
+    types: [opened, synchronize, reopened, ready_for_review]
+  push:
     branches: [ main ]
   workflow_dispatch:
 
