--- a/.github/workflows/opslog-sync.yml
+++ b/.github/workflows/opslog-sync.yml
@@ -4,9 +4,12 @@ permissions:
   contents: read
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches: [ main ]
+    types: [opened, synchronize, reopened, ready_for_review]
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   validate_and_render:
