--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,7 +1,6 @@
 name: CodeQL
 
 on:
-  workflow_dispatch:
   push:
     branches: [ main ]
 
@@ -12,28 +11,22 @@ permissions:
 
 jobs:
   analyze:
-    name: CodeQL / Analyze (python)
-    runs-on: ubuntu-22.04
-    timeout-minutes: 60
-
+    name: CodeQL / Analyze (python) (dynamic)
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         language: [ 'python' ]
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+      - uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
-          # Optional, keep or drop:
           queries: +security-extended
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+      - uses: github/codeql-action/autobuild@v3
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+      - uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{ matrix.language }}"
