--- a/.github/workflows/erep_equivalence.yml
+++ b/.github/workflows/erep_equivalence.yml
@@ -11,7 +11,7 @@ jobs:
   erep-equivalence:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
