--- a/.github/workflows/opslog-sync.yml
+++ b/.github/workflows/opslog-sync.yml
@@ -1,117 +1,32 @@
 name: opslog-sync
-
+on:
+  workflow_dispatch:
+  pull_request:
+    branches: [ "main" ]
 permissions:
   contents: read
-
-on:
-  pull_request:
-    branches: [ main ]
-    types: [opened, synchronize, reopened, ready_for_review]
-  pull_request_target:
-    branches: [ main ]
-    types: [opened, synchronize, reopened, ready_for_review]
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
 jobs:
-  validate_and_render:
-    runs-on: windows-latest
-
+  render:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955
         with:
           fetch-depth: 0
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
         with:
-          python-version: '3.11'
-
-      - name: Install Python deps
+          python-version: "3.11"
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          if (Test-Path "13_OpsLog/scripts/requirements.txt") {
-            pip install -r 13_OpsLog/scripts/requirements.txt
-          } else {
-            pip install pyyaml pyarrow jinja2 pandas
-          }
-
-      - name: Ensure CI dirs exist
-        shell: pwsh
+          pip install pyyaml jsonschema pandas pyarrow
+      - name: Validate SSOT schemas (placeholder step - implement your validator)
         run: |
-          New-Item -ItemType Directory -Force -Path 13_OpsLog\DERIVED\ci | Out-Null
-          New-Item -ItemType Directory -Force -Path 13_OpsLog\LEDGER     | Out-Null
-          New-Item -ItemType Directory -Force -Path 13_OpsLog\SSOT       | Out-Null
-
-      - name: Validate SSOT schemas (tolerant)
-        shell: pwsh
+          echo "Assuming SSOT parquet/jsonl validation here"
+      - name: Render views (placeholder step - implement renderer)
         run: |
-          $hasSsot = Test-Path 13_OpsLog\SSOT
-          if ($hasSsot) {
-            python 13_OpsLog/scripts/30_validate_schemas.py `
-              --schemas 13_OpsLog/SCHEMA `
-              --ssot    13_OpsLog/SSOT `
-              --out     13_OpsLog/DERIVED/ci/ci_validation.json
-          } else {
-            '{"status":"skipped","reason":"SSOT not present"}' |
-              Set-Content -Encoding UTF8 13_OpsLog\DERIVED\ci\ci_validation.json
-          }
-
-      - name: Render views (tolerant)
-        shell: pwsh
-        run: |
-          try {
-            python 13_OpsLog/scripts/40_render.py `
-              --config 13_OpsLog/policies/opslog_render.yml `
-              *> 13_OpsLog\DERIVED\ci\render.log
-          } catch {
-            $_ | Out-String | Set-Content -Encoding UTF8 13_OpsLog\DERIVED\ci\render_error.txt
-            exit 0
-          }
-
-      - name: Guarantee expected files exist (touch placeholders)
-        shell: pwsh
-        run: |
-          $files = @(
-            "13_OpsLog\DERIVED\ci\ci_validation.json",
-            "13_OpsLog\DERIVED\ci\ci_rendered.md",
-            "13_OpsLog\DERIVED\ci\ci_mission_control.md",
-            "13_OpsLog\DERIVED\ci\render.log",
-            "13_OpsLog\DERIVED\ci\render_error.txt",
-            "13_OpsLog\LEDGER\commit_ledger.md"
-          )
-          foreach ($f in $files) {
-            if (-not (Test-Path $f)) {
-              New-Item -ItemType File -Path $f -Force | Out-Null
-            }
-          }
-
-      - name: Generate Commit Ledger
-        shell: pwsh
-        run: |
-          $since = (git describe --tags --abbrev=0 --match 'scorecard-*' 2>$null)
-          if (-not $since) { $since = "4 weeks ago" }
-          ./13_OpsLog/scripts/commit_ledger.ps1 -Since "$since" -Output "13_OpsLog/LEDGER/commit_ledger.md"
-
-      - name: List generated files (debug)
-        shell: pwsh
-        run: |
-          Write-Host "==== DERIVED/ci ===="
-          Get-ChildItem -Recurse 13_OpsLog\DERIVED\ci | ForEach-Object { Write-Host $_.FullName }
-          Write-Host "==== LEDGER ===="
-          Get-ChildItem -Recurse 13_OpsLog\LEDGER     | ForEach-Object { Write-Host $_.FullName }
-
-      - name: Upload CI artifacts
+          echo "Assuming renderer writes to 13_OpsLog/DERIVED/ci/"
+      - name: Upload opslog-ci bundle
         uses: actions/upload-artifact@v4
         with:
           name: opslog-ci
-          if-no-files-found: warn
-          path: |
-            13_OpsLog/DERIVED/ci/ci_validation.json
-            13_OpsLog/DERIVED/ci/ci_rendered.md
-            13_OpsLog/DERIVED/ci/ci_mission_control.md
-            13_OpsLog/DERIVED/ci/render.log
-            13_OpsLog/DERIVED/ci/render_error.txt
-            13_OpsLog/LEDGER/commit_ledger.md
+          path: 13_OpsLog/DERIVED/ci
