--- a/.github/workflows/erep.yml
+++ b/.github/workflows/erep.yml
@@ -1,4 +1,4 @@
-# ERQ-META-BEGIN
+﻿# ERQ-META-BEGIN
 # {"doc_type": "workflow", "spec_version": "2.0", "source_baseline_hash": "471210aae34a0cb71fa200aa901d8747e7d0e4f1b6e68781f000f4e17cc22cbb", "provenance": {"build_id": "7f0ca3e6-b6aa-4ace-b2e1-d845ffd4ae8f", "built_at": "2025-09-11T21:56:19Z", "builder": "EREP v2.0", "tools": {"python": "3.11", "hashlib": "sha256"}}, "governance_links": {"acceptance_gates": "00_repo/.cbr/acceptance_gates.yaml", "registry": "00_repo/.cbr/registry.json", "audit_log": "00_repo/.cbr/audit_log.json"}, "canonicalization": {"encoding": "utf-8", "newline": "LF", "sort_keys": true}, "integrity": {"algo": "sha256", "canonical_scope": "payload", "value": "84ea1cb2179d3d481a472252ee23d0f24f67285e8713c2db1a0bbfeee1e16b0e"}}
 # ERQ-META-END
 name: EREP v1.1
@@ -19,10 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
 
       - name: Set up Python
-        uses: actions/setup-python@v6
+        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c
         with:
           python-version: '3.10'
           cache: pip
@@ -66,7 +66,7 @@ jobs:
 
       - name: Upload reports
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: erep-v1_1-${{ github.run_id }}
           path: out/erep_v1_1/**
