--- a/.github/workflows/opslog-sync.yml
+++ b/.github/workflows/opslog-sync.yml
@@ -1,4 +1,4 @@
-name: opslog-sync
+﻿name: opslog-sync
 on:
   workflow_dispatch:
   pull_request:
@@ -26,7 +26,7 @@ jobs:
         run: |
           echo "Assuming renderer writes to 13_OpsLog/DERIVED/ci/"
       - name: Upload opslog-ci bundle
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: opslog-ci
           path: 13_OpsLog/DERIVED/ci
