--- a/.gitignore
+++ b/.gitignore
@@ -10,19 +10,19 @@ __pycache__/
 *.zip
 *.parquet
 
-# Local env
+# Local env (plaintext never committed)
 .env
 .env.*
+!.env.*.enc
 
-@'
 # VS Code (shared workspace files)
 .vscode/*
 !.vscode/tasks.json
 !.vscode/settings.json
 !.vscode/extensions.json
-'@ | Out-File -FilePath .gitignore -Encoding utf8 -Append
-# VS Code (shared workspace files)
-.vscode/*
-!.vscode/tasks.json
-!.vscode/settings.json
-!.vscode/extensions.json
+
+# sops/age local state
+**/*.dec
+**/*.decrypted
+**/*.plaintext
+**/*.unencrypted
